Fix z-index issue on dropdown + class collision on progress menu

--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -85,3 +85,7 @@ h1, h2, h3, h4, p, a, a:link, a:link:hover, a:link:focus {
 	@include display(flex);
 	@include flex-direction(column);
 }
+
+.xmodule_display.xmodule_SequenceModule .sequence-nav {
+	z-index: 0;
+}
